@@ -1017,3 +1017,11 @@
 2013-02-15  Shinwoo Kim
 
         * Popup is now a focusable object.
+
+2013-02-15  ChunEon Park (Hermet)
+
+        * support naviframe, button, label orientation mode.
+
+2013-02-15  ChunEon Park (Hermet)
+
+        * Fix popup to not unswallow invalid contents when contents are deleted.
